--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -1,2 +1,5 @@
 <app-nav-bar></app-nav-bar>
+<div class="test-parent">
+  <app-control-factors></app-control-factors>
+</div>
 <!-- <router-outlet></router-outlet> -->
