Data emitted by selector components.

--- a/src/app/ui/controls/control-factors/control-factors.component.html
+++ b/src/app/ui/controls/control-factors/control-factors.component.html
@@ -7,7 +7,7 @@
         <h5 class="text-center">INOP. ENGINE</h5>
       </div>
       <div class="col-8">
-        <app-selector [toggleOptions]="['LEFT','RIGHT']" [initialValue]="0"></app-selector>
+        <app-selector label="INOP. ENGINE" [useValue]="true" [toggleOptions]="['LEFT','RIGHT']" [initialValue]="0"></app-selector>
       </div>
     </div>
 
@@ -17,7 +17,7 @@
         <h5 class="text-center">POWER</h5>
       </div>
       <div class="col-8">
-        <app-selector [toggleOptions]="['IDLE','-','-','-','FULL']" [initialValue]="4"></app-selector>
+        <app-selector label="POWER" [useValue]="false" [toggleOptions]="['IDLE','-','-','-','FULL']" [initialValue]="4"></app-selector>
       </div>
     </div>
 
@@ -27,7 +27,7 @@
         <h5 class="text-center">DENSITY ALTITUDE</h5>
       </div>
       <div class="col-8">
-        <app-selector [toggleOptions]="['0','1500','3000','4500','6000']" [initialValue]="2"></app-selector>
+        <app-selector label="DENSITY ALTITUDE" [useValue]="false" [toggleOptions]="['0','1500','3000','4500','6000']" [initialValue]="2"></app-selector>
       </div>
     </div>
 
@@ -37,7 +37,7 @@
         <h5 class="text-center">PROPELLER</h5>
       </div>
       <div class="col-8">
-        <app-selector [toggleOptions]="['WINDMILL','FEATHER']" [initialValue]="0"></app-selector>
+        <app-selector label="PROPELLER" [useValue]="true" [toggleOptions]="['WINDMILL','FEATHER']" [initialValue]="0"></app-selector>
       </div>
     </div>
 
@@ -47,7 +47,7 @@
         <h5 class="text-center">CONTROL TECHNIQUE</h5>
       </div>
       <div class="col-8">
-        <app-selector [toggleOptions]="['WINGS LEVEL','ZERO SIDE SLIP']" [initialValue]="1"></app-selector>
+        <app-selector label="CONTROL TECHNIQUE" [useValue]="true" [toggleOptions]="['WINGS LEVEL','ZERO SIDE SLIP']" [initialValue]="1"></app-selector>
       </div>
     </div>
 
@@ -57,7 +57,7 @@
         <h5 class="text-center">AIRSPEED (KIAS)</h5>
       </div>
       <div class="col-8">
-        <app-selector [toggleOptions]="['83','-','88','-','93']" [initialValue]="2"></app-selector>
+        <app-selector label="AIRSPEED (KIAS)" [useValue]="false" [toggleOptions]="['83','-','88','-','93']" [initialValue]="2"></app-selector>
       </div>
     </div>
 
@@ -67,7 +67,7 @@
         <h5 class="text-center">WEIGHT</h5>
       </div>
       <div class="col-8">
-        <app-selector [toggleOptions]="['MIN','-','-','-','MAX']" [initialValue]="0"></app-selector>
+        <app-selector label="WEIGHT" [useValue]="false" [toggleOptions]="['MIN','-','-','-','MAX']" [initialValue]="0"></app-selector>
       </div>
     </div>
 
@@ -77,7 +77,7 @@
         <h5 class="text-center">CENTER OF GRAVITY</h5>
       </div>
       <div class="col-8">
-        <app-selector [toggleOptions]="['AFT','-','-','-','FORE']" [initialValue]="0"></app-selector>
+        <app-selector label="CENTER OF GRAVITY" [useValue]="false" [toggleOptions]="['AFT','-','-','-','FORE']" [initialValue]="0"></app-selector>
       </div>
     </div>
 
@@ -87,7 +87,7 @@
         <h5 class="text-center">FLAPS</h5>
       </div>
       <div class="col-8">
-        <app-selector [toggleOptions]="['0','10','25','40']" [initialValue]="0"></app-selector>
+        <app-selector label="FLAPS" [useValue]="false" [toggleOptions]="['0','10','25','40']" [initialValue]="0"></app-selector>
       </div>
     </div>
 
@@ -97,7 +97,7 @@
         <h5 class="text-center">LANDING GEAR</h5>
       </div>
       <div class="col-8">
-        <app-selector [toggleOptions]="['UP','DOWN']" [initialValue]="0"></app-selector>
+        <app-selector label="LANDING GEAR" [useValue]="true" [toggleOptions]="['UP','DOWN']" [initialValue]="0"></app-selector>
       </div>
     </div>
 
