--- a/src/app/ui/controls/selector/selector.component.html
+++ b/src/app/ui/controls/selector/selector.component.html
@@ -1,3 +1,3 @@
-<mat-button-toggle-group class="expand" [(value)]="initialValue" (change)="valueChanged($event)" #group="matButtonToggleGroup">
-  <mat-button-toggle class="expand" *ngFor="let item of toggleOptions; let i = index;" [value]="i">{{item}}</mat-button-toggle>
+<mat-button-toggle-group class="expand" [(value)]="initialValue" #group="matButtonToggleGroup">
+  <mat-button-toggle class="expand" (change)="valueChanged($event)" *ngFor="let item of toggleOptions; let i = index;" [value]="i">{{item}}</mat-button-toggle>
 </mat-button-toggle-group>
