--- a/src/app/ui/controls/control-factors/control-factors.component.scss
+++ b/src/app/ui/controls/control-factors/control-factors.component.scss
@@ -1,9 +1,9 @@
-.control-factors-parent {
-  height: 100%;
-  width: 100%;
-  box-sizing:border-box;
-  border: 4px solid purple;
-}
+// .control-factors-parent {
+//   height: 100%;
+//   width: 100%;
+//   box-sizing:border-box;
+//   border: 4px solid purple;
+// }
 
 .expand-height {
   height: 100%;
