--- a/src/app/ui/controls/nav-bar/nav-bar.component.html
+++ b/src/app/ui/controls/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
   <span class="fill-middle"></span>
   <button mat-button [matMenuTriggerFor]="menu">Menu</button>
   <mat-menu #menu="matMenu" xPosition="after">
-    <button mat-menu-item>Directional Control/Vmca</button>
+    <button mat-menu-item routerLink="/directional-control-vmca">Directional Control/Vmca</button>
     <button mat-menu-item>Single-Engine Performance</button>
     <button mat-menu-item>Critical Engine Factors</button>
     <button mat-menu-item>Zero Sideslip Technique</button>
