--- a/src/app/ui/ui.component.html
+++ b/src/app/ui/ui.component.html
@@ -1,5 +1,2 @@
 <app-nav-bar></app-nav-bar>
-<div class="test-parent">
-  <app-control-factors></app-control-factors>
-</div>
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
