--- a/src/app/ui/nav-bar/nav-bar.component.html
+++ b/src/app/ui/nav-bar/nav-bar.component.html
@@ -4,8 +4,8 @@
   <button mat-button [matMenuTriggerFor]="menu">Menu</button>
   <mat-menu #menu="matMenu" xPosition="after">
     <button mat-menu-item routerLink="/directional-control-vmca">Directional Control/Vmca</button>
-    <button mat-menu-item>Single-Engine Performance</button>
-    <button mat-menu-item>Critical Engine Factors</button>
-    <button mat-menu-item>Zero Sideslip Technique</button>
+    <button mat-menu-item routerLink="/single-engine-performance">Single-Engine Performance</button>
+    <button mat-menu-item routerLink="/critical-engine-factors">Critical Engine Factors</button>
+    <button mat-menu-item routerLink="/zero-sideslip-technique">Zero Sideslip Technique</button>
   </mat-menu>
 </mat-toolbar>
