Adds single toggle control. Adds toggles to view-cef.

--- a/src/app/ui/nav-bar/nav-bar.component.html
+++ b/src/app/ui/nav-bar/nav-bar.component.html
@@ -3,9 +3,9 @@
   <span class="fill-middle"></span>
   <button mat-button [matMenuTriggerFor]="menu">Menu</button>
   <mat-menu #menu="matMenu" xPosition="after">
-    <button mat-menu-item routerLink="/directional-control-vmca">Directional Control/Vmca</button>
-    <button mat-menu-item routerLink="/single-engine-performance">Single-Engine Performance</button>
-    <button mat-menu-item routerLink="/critical-engine-factors">Critical Engine Factors</button>
-    <button mat-menu-item routerLink="/zero-sideslip-technique">Zero Sideslip Technique</button>
+    <button mat-menu-item routerLink="/directional-control-vmca" routerLinkActive="active-link">Directional Control/Vmca</button>
+    <button mat-menu-item routerLink="/single-engine-performance" routerLinkActive="active-link">Single-Engine Performance</button>
+    <button mat-menu-item routerLink="/critical-engine-factors" routerLinkActive="active-link">Critical Engine Factors</button>
+    <button mat-menu-item routerLink="/zero-sideslip-technique" routerLinkActive="active-link">Zero Sideslip Technique</button>
   </mat-menu>
 </mat-toolbar>
