--- a/src/app/ui/views/view-cef/view-cef.component.html
+++ b/src/app/ui/views/view-cef/view-cef.component.html
@@ -27,38 +27,26 @@
     </div>
 
     <div class="row control">
-      <div class="col-4">
-        <h5 class="text-center">P-FACTOR</h5>
-      </div>
-      <div class="col-8">
-        <p class="text-center">Single toggle control goes here.</p>
+      <div class="col text-center">
+        <app-toggle [value]="'P-FACTOR'" [selected]="true"></app-toggle>
       </div>
     </div>
 
     <div class="row control">
-      <div class="col-4">
-        <h5 class="text-center">SPIRALING SLIPSTREAM</h5>
-      </div>
-      <div class="col-8">
-        <p class="text-center">Single toggle control goes here.</p>
+      <div class="col text-center">
+        <app-toggle [value]="'SPIRALING SLIPSTREAM'" [selected]="false"></app-toggle>
       </div>
     </div>
 
     <div class="row control">
-      <div class="col-4">
-        <h5 class="text-center">ACCELERATED SLIPSTREAM</h5>
-      </div>
-      <div class="col-8">
-        <p class="text-center">Single toggle control goes here.</p>
+      <div class="col text-center">
+        <app-toggle [value]="'ACCELERATED SLIPSTREAM'" [selected]="false"></app-toggle>
       </div>
     </div>
 
     <div class="row control">
-      <div class="col-4">
-        <h5 class="text-center">TORQUE</h5>
-      </div>
-      <div class="col-8">
-        <p class="text-center">Single toggle control goes here.</p>
+      <div class="col text-center">
+        <app-toggle [value]="'TORQUE'" [selected]="false"></app-toggle>
       </div>
     </div>
 
