--- a/src/app/ui/views/view-dcv/view-dcv.component.scss
+++ b/src/app/ui/views/view-dcv/view-dcv.component.scss
@@ -1,34 +1,4 @@
-.panel {
-  position: absolute;
-  border: 4px solid purple;
-  padding: 0;
-}
-
-.panel.control {
-  width: 25%;
-  height: 79%;
-  right: 0em;
-}
-
-.panel.description {
-  width: 75%;
-  height: 15%;
-  bottom: 0em;
-  padding: 10px;
-}
-
-.panel.data {
-  width: 20%;
-  height: 79%;
-  padding: 10px;
-}
-
-.panel.logo {
-  width: 25%;
-  height: 15%;
-  bottom: 0em;
-  right: 0em;
-}
+@import "src/app/ui/ui.component.scss";
 
 .footnote {
   margin: 0;
