messing with theming.

--- a/src/app/ui/controls/control-factors/control-factors.component.html
+++ b/src/app/ui/controls/control-factors/control-factors.component.html
@@ -4,7 +4,7 @@
     <!-- Title -->
     <div class="row mb-auto align-items-center">
       <div class="col">
-        <h2 class="text-center">Control Factors</h2>
+        <h2 class="text-center">{{ title }}</h2>
         <hr>
       </div>
     </div>
