--- a/src/app/ui/views/view-sep/view-sep.component.html
+++ b/src/app/ui/views/view-sep/view-sep.component.html
@@ -1,3 +1,6 @@
+<!-- ---------------- -->
+<!--    DATA          -->
+<!-- ---------------- -->
 <div class="panel data">
 
   <div class="container-fluid">
@@ -68,9 +71,17 @@
   </div>
 
 </div>
+
+<!-- ---------------- -->
+<!--  CONTROL         -->
+<!-- ---------------- -->
 <div class="panel control">
-  <app-control-factors [disablePower]="true"></app-control-factors>
+  <app-control-factors title="PERFORMANCE FACTORS" [disablePower]="true"></app-control-factors>
 </div>
+
+<!-- ---------------- -->
+<!--  DESCRIPTION     -->
+<!-- ---------------- -->
 <div class="panel description">
 
   <p>
@@ -79,8 +90,11 @@
      whenever the cursor changes to a pointing hand will also display additional text here.
   </p>
 
-
 </div>
+
+<!-- ---------------- -->
+<!--    LOGO          -->
+<!-- ---------------- -->
 <div class="panel logo">
 
 </div>
