--- a/src/app/ui/ui.component.scss
+++ b/src/app/ui/ui.component.scss
@@ -1,3 +1,5 @@
+@import 'src/styles.scss';
+
 .test-parent {
   margin-left: 2em;
   width: 25%;
@@ -6,7 +8,7 @@
 
 .panel {
   position: absolute;
-  border: 4px solid red;
+  border: 4px solid #ffa000;
   padding: 0;
 }
 
