--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,8 +1,8 @@
 // define 3 theme color
 // mat-palette accepts $palette-name, main, lighter and darker variants
-$app-primary: mat-palette($mat-red, 700, 300, 900);
-$app-accent: mat-palette($mat-light-blue);
-$app-warn: mat-palette($mat-deep-purple);
+$app-primary: mat-palette($mat-amber, 700, 300, 900);
+$app-accent: mat-palette($mat-amber, A200, A100, A700);
+$app-warn: mat-palette($mat-red);
 
 $app-theme: mat-dark-theme(
   $app-primary,
