--- a/src/app/ui/views/view-dcv/view-dcv.component.html
+++ b/src/app/ui/views/view-dcv/view-dcv.component.html
@@ -33,7 +33,7 @@
 
 </div>
 <div class="panel control">
-  <app-control-factors [disablePower]="false"></app-control-factors>
+  <app-control-factors title="CONTROL FACTORS" [disablePower]="false"></app-control-factors>
 </div>
 <div class="panel description">
 
