Creates card button component. Main menu routing complete.

--- a/src/app/ui/views/view-menu/view-menu.component.html
+++ b/src/app/ui/views/view-menu/view-menu.component.html
@@ -1,1 +1,40 @@
-<p>view-menu works!</p>
+<div class="container-fluid">
+  <div class="row h-25">
+    <div class="col my-auto">
+      <h4 class="w-75 mx-auto text-center">
+        This software uses interactive simulations to illustrate one engine inoperative aerodynamics. The simulations are
+        loosely based on the Piper Seminole, a light twin commonly used in multiengine instruction.
+      </h4>
+    </div>
+  </div>
+  <div class="container h-75">
+    <div class="row mb-5">
+      <div class="col-12 my-auto">
+        <app-card-button
+          title="Directional Control/VMCA"
+          link="/directional-control-vmca"></app-card-button>
+      </div>
+    </div>
+    <div class="row mb-5">
+      <div class="col-12 my-auto">
+        <app-card-button
+          title="Single-Engine Performance"
+          link="/single-engine-performance"></app-card-button>
+      </div>
+    </div>
+    <div class="row mb-5">
+      <div class="col-12 my-auto">
+        <app-card-button
+          title="Critical Engine Factors"
+          link="/critical-engine-factors"></app-card-button>
+      </div>
+    </div>
+    <div class="row mb-5">
+      <div class="col-12 my-auto">
+        <app-card-button
+        title="Zero Sideslip Technique"
+        link="/zero-sideslip-technique"></app-card-button>
+      </div>
+    </div>
+  </div>
+</div>
