Nav title now main menu link

--- a/src/app/ui/nav-bar/nav-bar.component.html
+++ b/src/app/ui/nav-bar/nav-bar.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary">
-  <h2>One Engine Inoperative Aerodynamics</h2>
+  <a routerLink="/">
+    <h1 class="title">One Engine Inoperative Aerodynamics</h1>
+  </a>
   <span class="fill-middle"></span>
   <button mat-button [matMenuTriggerFor]="menu">Menu</button>
   <mat-menu #menu="matMenu" xPosition="after">
