--- a/src/app/ui/nav-bar/nav-bar.component.scss
+++ b/src/app/ui/nav-bar/nav-bar.component.scss
@@ -1,3 +1,23 @@
+@import "src/styles.scss";
+
 .fill-middle {
   flex: 1 1 auto;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+
+@mixin app-title-hover($theme) {
+  $hover: map-get($theme, foreground);
+
+  h2:hover {
+    color: mat-color($foreground);
+  }
 }
