add threejs engine and update angular package version to 8

--- a/src/app/ui/views/view-dcv/view-dcv.component.html
+++ b/src/app/ui/views/view-dcv/view-dcv.component.html
@@ -1,3 +1,7 @@
+
+<!-- ----------------  -->
+<!--    DATA           -->
+<!-- ----------------  -->
 <div class="panel data">
 
   <div class="container-fluid">
@@ -32,9 +36,24 @@
   </div>
 
 </div>
+
+<!-- ----------------  -->
+<!--    RENDERER       -->
+<!-- ----------------  -->
+<div class="panel renderer">
+  <app-engine></app-engine>
+</div>
+
+<!-- ----------------  -->
+<!--    CONTROL        -->
+<!-- ----------------  -->
 <div class="panel control">
   <app-control-factors title="CONTROL FACTORS" [disablePower]="false"></app-control-factors>
 </div>
+
+<!-- ----------------  -->
+<!--    DESCRIPTION    -->
+<!-- ----------------  -->
 <div class="panel description">
 
   <p>
@@ -45,6 +64,10 @@
 
 
 </div>
+
+<!-- ----------------  -->
+<!--    LOGO           -->
+<!-- ----------------  -->
 <div class="panel logo">
 
 </div>
