--- a/src/app/ui/views/view-dcv/view-dcv.component.scss
+++ b/src/app/ui/views/view-dcv/view-dcv.component.scss
@@ -1,5 +1,10 @@
 @import "src/app/ui/ui.component.scss";
 
+.renderer {
+  top: 0em;
+  left: 17%;
+}
+
 .footnote {
   margin: 0;
   position: absolute;
