--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,7 +1,7 @@
 // define 3 theme color
 // mat-palette accepts $palette-name, main, lighter and darker variants
-$app-primary: mat-palette($mat-amber, 700, 300, 900);
-$app-accent: mat-palette($mat-amber, A200, A100, A700);
+$app-primary: mat-palette($mat-red); //, 700, 300, 900);
+$app-accent: mat-palette($mat-red, A200, A100, A700);
 $app-warn: mat-palette($mat-red);
 
 $app-theme: mat-dark-theme(
