Rendering threejs canvas in view-dcv

--- a/src/app/engine/engine.component.html
+++ b/src/app/engine/engine.component.html
@@ -1,3 +1,5 @@
 <div class="engine-wrapper">
-  <canvas #rendererCanvas id="rendererCanvas"></canvas>
+  <div id="result">
+    <canvas #rendererCanvas></canvas>
+  </div>
 </div>
