Basic threejs cleanup.

--- a/src/app/ui/views/view-dcv/view-dcv.component.html
+++ b/src/app/ui/views/view-dcv/view-dcv.component.html
@@ -61,7 +61,7 @@
     on the aircraft. Click on the "Data" and "Control Factors" text labels to read descriptive text here. Clicking on the graphics above
      whenever the cursor changes to a pointing hand will also display additional text here.
   </p>
-
+  <button (click)="killCube()">Kill cube</button>
 
 </div>
 
