--- a/src/app/ui/views/view-sep/view-sep.component.html
+++ b/src/app/ui/views/view-sep/view-sep.component.html
@@ -73,6 +73,13 @@
 </div>
 
 <!-- ---------------- -->
+<!--  RENDERER        -->
+<!-- ---------------- -->
+<div class="panel renderer">
+  <app-engine></app-engine>
+</div>
+
+<!-- ---------------- -->
 <!--  CONTROL         -->
 <!-- ---------------- -->
 <div class="panel control">
