--- a/src/app/ui/views/view-sep/view-sep.component.scss
+++ b/src/app/ui/views/view-sep/view-sep.component.scss
@@ -1,5 +1,12 @@
 @import "src/app/ui/ui.component.scss";
 
+.renderer {
+  top: 0em;
+  left: 17%;
+  width: 58%;
+  height: 85%;
+}
+
 .footnote {
   margin: 0;
   position: absolute;
