all views now render dummy model

--- a/src/app/ui/views/view-cef/view-cef.component.html
+++ b/src/app/ui/views/view-cef/view-cef.component.html
@@ -1,3 +1,6 @@
+<!-- ----------------  -->
+<!--    CONTROL        -->
+<!-- ----------------  -->
 <div class="panel control">
 
   <div class="container-fluid">
@@ -54,6 +57,16 @@
 
 </div>
 
+<!-- ----------------  -->
+<!--    RENDERER       -->
+<!-- ----------------  -->
+<div class="panel renderer">
+  <app-engine></app-engine>
+</div>
+
+<!-- ----------------  -->
+<!--    DESCRIPTION    -->
+<!-- ----------------  -->
 <div class="panel description">
 
   <p>
@@ -66,6 +79,9 @@
 
 </div>
 
+<!-- ----------------  -->
+<!--    LOGO           -->
+<!-- ----------------  -->
 <div class="panel logo">
 
 </div>
