--- a/src/app/ui/views/view-zst/view-zst.component.scss
+++ b/src/app/ui/views/view-zst/view-zst.component.scss
@@ -1,5 +1,11 @@
 @import "src/app/ui/ui.component.scss";
 
+.renderer {
+  top: 4em;
+  width: 75%;
+  height: 79%;
+}
+
 .exercise-button {
   padding: 1em 2em 1em 2em;
 }
