--- a/src/app/ui/views/view-zst/view-zst.component.html
+++ b/src/app/ui/views/view-zst/view-zst.component.html
@@ -1,3 +1,6 @@
+<!-- ----------------  -->
+<!--    CONTROL        -->
+<!-- ----------------  -->
 <div class="panel control">
 
   <div class="container-fluid">
@@ -50,6 +53,16 @@
 
 </div>
 
+<!-- ----------------  -->
+<!--    RENDERER       -->
+<!-- ----------------  -->
+<div class="panel renderer">
+  <app-engine></app-engine>
+</div>
+
+<!-- ----------------  -->
+<!--    DESCRIPTION    -->
+<!-- ----------------  -->
 <div class="panel description">
 
   <p>
@@ -59,6 +72,9 @@
 
 </div>
 
+<!-- ----------------  -->
+<!--    LOGO           -->
+<!-- ----------------  -->
 <div class="panel logo">
 
 </div>
