Adjusting font sizes. Moving themes. Creating fonts.scss

--- a/src/app/ui/nav-bar/nav-bar.component.scss
+++ b/src/app/ui/nav-bar/nav-bar.component.scss
@@ -1,4 +1,8 @@
-@import "src/styles.scss";
+@import "src/styles/styles.scss";
+
+mat-toolbar {
+  height:6%;
+}
 
 .fill-middle {
   flex: 1 1 auto;
