--- a/src/app/ui/views/view-dcv/view-dcv.component.scss
+++ b/src/app/ui/views/view-dcv/view-dcv.component.scss
@@ -1,10 +1,10 @@
 @import "src/app/ui/ui.component.scss";
 
 .renderer {
-  top: 4em;
+  top: 6%;
   left: 17%;
   width: 58%;
-  height: 78%;
+  height: 79%;
 }
 
 .footnote {
