--- a/src/app/ui/controls/card-button/card-button.component.scss
+++ b/src/app/ui/controls/card-button/card-button.component.scss
@@ -1,4 +1,4 @@
-@import 'src/styles.scss';
+@import 'src/styles/styles.scss';
 
 @mixin app-card-button($app-theme) {
   $background: map-get($app-theme, background);
