--- a/src/app/ui/controls/selector/selector.component.scss
+++ b/src/app/ui/controls/selector/selector.component.scss
@@ -1,3 +1,12 @@
 .expand {
   width: 100%;
+  min-width: 1%;
+  height: 5vh;
+  min-height: 1%;
+  display:flex;
+  vertical-align: middle;
+}
+
+mat-toggle-button {
+  font-size: 1vmin;
 }
