--- a/src/app/ui/controls/toggle/toggle.component.scss
+++ b/src/app/ui/controls/toggle/toggle.component.scss
@@ -1,3 +1,15 @@
-.toggle-button {
-  width: 100%;
+// .toggle-button {
+//   width: 100%;
+//   height: 100%;
+// }
+
+// button {
+//   height: 100%;
+// }
+
+mat-button-toggle .mat-button-toggle-button {
+  min-width: 1%!important;
+  min-height: 1%!important;
 }
+
+
