--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -39,5 +39,12 @@ html, body {
 
 body { margin: 0; }
 
-
-h5 { }
+div.mat-button-toggle-label-content  {
+  padding: 0!important;
+  width: 100%;
+  height: 100%;
+  min-width: 1%!important;
+  min-height: 1%!important;
+  text-align: center!important;
+  font-size: 0.8vw;
+}
