Finished DCV markings. Changed name of markings-model to aerodynamics-model. Values of VMCA and stall speed are displaying (incorrectly).

--- a/src/app/ui/views/view-dcv/view-dcv.component.html
+++ b/src/app/ui/views/view-dcv/view-dcv.component.html
@@ -17,7 +17,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <h1 class="text-center">74 KIAS</h1>
+        <h1 class="text-center">{{ stallSpeed }} KIAS</h1>
       </div>
     </div>
     <div class="row">
@@ -27,7 +27,7 @@
     </div>
     <div class="row">
       <div class="col">
-        <h1 class="text-center">57 KIAS</h1>
+        <h1 class="text-center">{{ vmca }} KIAS</h1>
       </div>
     </div>
     <div class="footnote">
