--- a/src/app/ui/views/view-dcv/view-dcv.component.html
+++ b/src/app/ui/views/view-dcv/view-dcv.component.html
@@ -57,6 +57,7 @@
 <div class="panel description">
 
   <p>
+    {{content}}
     This section covers single-engine directional conrol and Vmca. Change the factor settings on the right to see the resulting effects
     on the aircraft. Click on the "Data" and "Control Factors" text labels to read descriptive text here. Clicking on the graphics above
      whenever the cursor changes to a pointing hand will also display additional text here.
